--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
     android:orientation="vertical"
-    tools:context=".view.DetailActivity">
+    tools:context=".screens.details.DetailActivity">
 
     <ImageView
         android:layout_width="match_parent"
