--- a/app/src/main/res/layout/item_list_products.xml
+++ b/app/src/main/res/layout/item_list_products.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:layout_margin="7dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -27,27 +27,29 @@
 
 
                 <TextView
+                    android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"
                     android:layout_marginLeft="10dp"
-                    android:maxLines="2"
+                    android:layout_marginRight="10dp"
                     android:layout_marginBottom="5dp"
-                    android:textSize="14dp"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:text="مشکی-خاکستری"
                     android:textColor="#000"
-                    android:text="مشکی-خاکستری" />
+                    android:textSize="14dp" />
 
                 <TextView
+                    android:id="@+id/tv_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginRight="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
+                    android:gravity="center"
+                    android:text="150,000 تومان"
                     android:textColor="#4CAF50"
-                    android:textSize="12dp"
-                    android:text="150,000 تومان" />
+                    android:textSize="12dp" />
 
             </LinearLayout>
 
@@ -58,15 +60,16 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:gravity="center">
 
         <ImageView
+            android:id="@+id/iv_product"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:padding="5dp"
             android:background="@drawable/sahpe_item_img"
+            android:padding="5dp"
             android:src="@drawable/black_gray" />
 
     </RelativeLayout>
